Fix scrollbar bug

--- a/frontend/src/Monitor/Charts/Military/Military.css
+++ b/frontend/src/Monitor/Charts/Military/Military.css
@@ -4,7 +4,7 @@
 }
 
 .militaryOverviewArea {
-    height: 60%;
+    height: 15%;
     width: 100%;
 }
 
